base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memo-app-ingress
  namespace: memo-app
  annotations:
    external-dns.alpha.kubernetes.io/hostname: memo-app.shop
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: memo-app-alb
    alb.ingress.kubernetes.io/group.name: memo-app
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:571170910853:certificate/3d881eda-5efd-4cb3-be9d-091b024b0f25"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
spec:
  ingressClassName: alb
  rules:
  - host: memo-app.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: memo-app-service
            port:
              number: 8080
